[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme/fonts/SnowtopCaps.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/theme/fonts/Text_desc_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/UI/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/BGM/off_limits.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
extra_spacing_char = 4
extra_spacing_space = 10
font_data = ExtResource( 1 )

[node name="MainMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.517647, 0.635294, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "BGM"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 362.0
margin_top = 191.0
margin_right = 918.0
margin_bottom = 529.0
custom_constants/separation = 100

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 556.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 1 )
text = "Geta GJ 13"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 229.0
margin_right = 556.0
margin_bottom = 338.0
custom_constants/separation = 20

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 556.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Start"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 556.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 556.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
